ui/static/main.css
html {
  height: 100%;
  font-family: "Rubik", sans-serif;
  scroll-behavior: smooth;
}

body {
  min-height: 100%;
  display: grid;
  grid-template-rows: auto;
  font-size: 120%;
}

body.elements-2 {
  grid-template-rows: 1fr auto;
}

body.elements-3 {
  grid-template-rows: auto 1fr auto;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Roboto Slab", sans-serif;
}

.section-full {
  min-height: 100vh;
  min-height: -webkit-fill-available;
  min-height: fill-available;
}

@keyframes jump {
  0% {
    transform: translateY(-10px);
  }
  100% {
    transform: translateY(0);
  }
}

.scroll-hint {
  position: absolute;
  width: 30px;
  height: 30px;
  left: calc(50% - 15px);
  top: calc(100% - 40px);
  animation: jump 0.75s infinite alternate ease-in-out;
}

.scroll-hint svg {
  width: 100%;
  height: 100%;
}

.uk-section-secondary a {
  text-decoration: underline;
}

@media (min-width: 960px) {
  .uk-margin-remove-top\@s {
    margin-top: 0 !important;
  }
}

.site-logo svg {
  height: 1.5em;
  margin-right: 0.25em;
}

.index-logo {
  opacity: 0.8;
}

.contact-form {
  max-width: 720px;
}

